src/objects/echosign_dev1__Agreement_Notification__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement_Event_Type__c</fullName>
        <label>Agreement_Event_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Status__c</fullName>
        <label>Agreement_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>AdobeSign_Agreement_Notification</relationshipLabel>
        <relationshipName>AdobeSign_Agreement_Notification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <label>Document_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Notification_Type__c</fullName>
        <description>This value will classify the notification type that whether it is inserted from push agreement callback or normal sign notification.</description>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO_UPDATE</fullName>
                    <default>true</default>
                    <label>AUTO_UPDATE</label>
                </value>
                <value>
                    <fullName>CALLBACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Notification</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Agreement Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>